# WirelessScreenCast

./: .gitignore  CMakeLists.txt  README.md  build_vs2022.bat
.github/workflows/: msbuild.yml
CastSenderCore/: CMakeLists.txt  CastSenderCore.cpp  CastSenderCore.h
ColorConvertModule/: CMakeLists.txt
ConfigModule/: CMakeLists.txt
LogModule/: CMakeLists.txt  LogInternal.cpp  LogInternal.h  LogLib.cpp  Loglib.h
RingBufferModule/: CMakeLists.txt  RingBuffer.h
ScreenCaptureModule/: CMakeLists.txt  FFmpegScreenCapturer.cpp  FFmpegScreenCapturer.h  IScreenCapturer.h  ScreenCapture.cpp  ScreenCapture.h  ScreenCaptureCommon.h  ScreenCapturerFactory.h
WirelessScreenCastApplication/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  NativeCastSenderCore.cs
